# reiDbViewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: desktop-bundle.yml  docs.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: compose-updater-artifacts.mjs  ensure-updater-signing.mjs  generate-updater-manifest.mjs  prebundle-tauri.mjs
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  secrets.json  sql.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api_scripts.rs  main.rs  migrations.rs
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: AppFrame.tsx  ConnectionSwitcher.tsx  DataGrid.tsx  JsonCell.tsx  LeftDrawer.tsx  NavBar.tsx  Providers.tsx  (+2 more)
docs/: docker.md  reiDbView-dev-plan.md  reiDbView-审计与优化建议-v1.md  saved-sql.md
docs/desktop/: M4-saved-sql-plan.md  assistant-development-plan.md  assistant-page-plan.md  desktop-updater-design.md  desktop-updater-rollout-plan.md  github-pages-docs-plan.md  keyring-to-sqlite-migration.md  monaco-editor-integration.md  promot.md  queries-page-baseline.md  queries-page-desktop-optimization-plan.md  queries-page-desktop-optimization.md  queries-page-desktop-user-guide.md  queries-page-developer-guide.md  queries-page-optimization-analysis.md  queries-page-optimization-changelog.md  queries-page-optimization-plan.md  queries-page-phase6-regression-report.md  query-api-script-acceptance.md  query-api-script-debug-notes.md  query-api-script-development-plan.md  query-api-script-plan.md  resizable-data-grid-plan.md  saved-queries-api-service.md  sql-completion-plan.md  tauri-edition-plan.md  开发计划.md  新语法设计.md  模板语法开发计划.md
docs/website/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
scripts/: bump-desktop-version.js  release-desktop-version.js
tools/mock-api-script/: server.py
(+235 files in other folders)
