[package]
name = "reidbview-desktop"
version = "0.0.1"
description = "reiDbView Desktop (Tauri v2)"
authors = ["reiDbView"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
