[package]
name = "reidbview-desktop"
version = "0.0.40"
description = "reiDbView Desktop (Tauri v2)"
authors = ["reiDbView"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres"] }
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "macros", "sqlite", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
csv = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
